package com.directi.training.dip.exercise_refractored;

import java.io.IOException;

public interface IDataReader {
    String readData() throws IOException;

}